Profile Pic on Posts & other additions/fixes
- Fixed default profile pic and mod flag links
- Fixed Moda Labs logo background
- Added Home button w/ animation in Profile Page
- Added redirect for accessing any profile page w/out being logged in
- Added custom scrollbars for forms across the website
- Fixed Select Design container to resize when design is selected to fit aspect ratio of image

--- a/public/Homepage.css
+++ b/public/Homepage.css
@@ -345,10 +345,24 @@ body::-webkit-scrollbar {
   scrollbar-width: none;
 }
 
-/* This hides the scrollbar for Chrome and other browsers */
+/* This customises the scrollbar for Chrome and other browsers */
 .collabList::-webkit-scrollbar {
-  display: none;
+  width: 10px;
 }
+
+.collabList::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.collabList::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 5px;
+}
+
+.collabList::-webkit-scrollbar-thumb:hover {
+  background-color: #0a0a0a;
+}
+
 
 #commentsContent {
   height: 80%;
@@ -437,10 +451,11 @@ body::-webkit-scrollbar {
 }
 
 .postImage {
-  height: 50%;
+  height: auto;
   /* width: 648px; */
+  /* 455px is the width and height of a design at 70% width */
   width: 100%;
-  flex-direction: row;;
+  flex-direction: row;
   display: flex;
   align-items: center;
   /* flex-wrap: wrap; */
@@ -449,6 +464,8 @@ body::-webkit-scrollbar {
   border-radius: 20px;
   overflow: hidden;
   border: 1px solid grey;
+  margin: auto;
+  background-color: black;
 }
 /* This is the container for the comments */
 .comments {
