--- a/public/collab_room.css
+++ b/public/collab_room.css
@@ -49,9 +49,22 @@
   scrollbar-width: none;
 }
 
-/* This hides the scrollbar for Chrome and other browsers */
+/* This customises the scrollbar for Chrome and other browsers */
 .templateGrid::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+}
+
+.templateGrid::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.templateGrid::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 5px;
+}
+
+.templateGrid::-webkit-scrollbar-thumb:hover {
+  background-color: #0a0a0a;
 }
 
 .templateGrid {
@@ -90,12 +103,19 @@
   background-color: transparent;
 }
 
+.collabRoomHeaderFooter {
+  position: absolute;
+  height: 12%;
+  background-color: black;
+}
+
 #collabRoomFooter {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   height: 12%;
+  background-color: black;
 }
 
 .collabRoomFooterContainer {
